# income_tax_calculator

./: notes.txt  pyproject.toml
itc/: __main__.py  exceptions.py  taxes.py
itc/federal/: 2020.json  2021.json  federal.py
itc/state/: california.py  common.py  idaho.py
itc/state/california/: 2021.json
itc/state/idaho/: 2021.json
