[tool.poetry]
name = "itc"
version = "0.1.0"
description = "Approximate Tax Calculator"
authors = ["Michael Baptist <mbaptist.opensource@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
bandit = "^1.7.0"
flake8-bugbear = "^21.4.3"
tox = "^3.24.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
